Fix visual issues on mobile preview bar

--- a/public/content.css
+++ b/public/content.css
@@ -17,6 +17,10 @@
 	transition: transform .1s cubic-bezier(0,0,0.2,1);
 }
 
+.ytm-progress-bar > #previewbar {
+	height: 3px;
+}
+
 #previewbar.hovered {
 	transform: scaleY(1)
 }
